ceilometer (2013.2.3-1) unstable; urgency=low

  * New upstream release.
  * Refreshed patches.

 -- Thomas Goirand <zigo@debian.org>  Wed, 09 Apr 2014 20:02:01 +0800

ceilometer (2013.2.2-4) unstable; urgency=medium

  * Updated ru.po thanks to Yuri Kozlov (Closes: #736703).

 -- Thomas Goirand <zigo@debian.org>  Sun, 02 Mar 2014 17:24:45 +0800

ceilometer (2013.2.2-3) unstable; urgency=medium

  * Fixes build-depend for the new SQLA 0.9.x.

 -- Thomas Goirand <zigo@debian.org>  Sun, 23 Feb 2014 22:49:13 +0000

ceilometer (2013.2.2-2) unstable; urgency=medium

  * Rebuilt Ceilometer with the new openstack-pkg-tools >= 9.

 -- Thomas Goirand <zigo@debian.org>  Fri, 14 Feb 2014 17:24:30 +0000

ceilometer (2013.2.2-1) unstable; urgency=medium

  * New upstream point release.
  * refreshed patches.

 -- Thomas Goirand <zigo@debian.org>  Fri, 14 Feb 2014 10:19:27 +0800

ceilometer (2013.2.1-5) unstable; urgency=medium

  * Added missing postrotate scripts to restart daemons after logrotate
    (Closes: #736930).

 -- Thomas Goirand <zigo@debian.org>  Mon, 03 Feb 2014 15:41:29 +0800

ceilometer (2013.2.1-4) unstable; urgency=medium

  * Fix ${LIBVIRT_GROUP} when doing adduser ceilometer libvirt, so that it also
    works on Ubuntu.

 -- Thomas Goirand <zigo@debian.org>  Wed, 15 Jan 2014 17:37:07 +0800

ceilometer (2013.2.1-3) unstable; urgency=medium

  * Adds ceilometer/api/app.wsgi to /usr/share/ceilometer.
  * Added/updated debconf templates thanks to:
    - German: Martin E. Schauer (Closes: #734739)
    - Swedish: Martin Bagge (Closes: #734583)
    - French: Julien Patriarca (Closes: #733092)
    - Spanish: Matias A. Bellone (Closes: #732534)

 -- Thomas Goirand <zigo@debian.org>  Thu, 19 Dec 2013 20:53:09 +0800

ceilometer (2013.2.1-2) unstable; urgency=medium

  * Added missing version depends for python-iso8601 (needs >= 0.1.8).
  * Removes .testrepository and nova_tests/.testrepository on clean to allow
    double builds (Closes: #732372).
